[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "slack-bot"
description = "Slack bot"
requires-python = ">=3.10"
dependencies = [
    "dotenv",
    "schedule",
    "slack_bolt"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dynamic = ["readme", "version"]
authors = [
    {name = "Cristóbal Braga", email = "cristobal.braga@ug.uchile.cl"}
]

[tool.setuptools]
py-modules = ["app"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
version = {attr = "app.__version__"}